# crypto-market-dynamics

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Current_Architecture.md  DATA_LICENSE.md  HANDOFF.md  LICENSE  Latest Output.txt  Makefile  README.md  pyproject.toml
.cursor/rules/: data-integrity.mdc  defensive-commits.mdc  evidence-confidence.mdc  global-constitution.mdc  notebook-hygiene.mdc  spec-compliance.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  portfolio-smoke.yml  public-output-smoke.yml
CODEX/: Manager_Reviewer_Prompt.md  current_status_analysis.md  data_analysis.md
Data/: MASTER_DATA.csv  MASTER_DATA.md
Data/MarketStructure/: README.md
Manager/Codex Manager/: FINAL_ENHANCED.md  README.md  codex_manager_review_2026-04-18.md  multi_agent_workflow_and_quality_gates_v0.md  p0_execution_backlog.md
Manager/Opus Manager/: comprehensive_review.md
Manager/Paper 1/: Paper 1 CLAUDE.md  Paper 1 GEMINI.md  Paper 1 Opus.md
archive/: README.md
archive/career_materials/: github_pinned_repo_description.md  portfolio_v2_1_resume_bullets.md  portfolio_v2_2_resume_bullets.md  portfolio_v2_resume_bullets.md  recruiter_summary.md
archive/release_process/: manual_ci_check_instructions.md  manual_pr_instructions.md  manual_push_instructions.md  pr_review_package.md  pr_summary_portfolio_v2.md  reorganization_audit.md
config/: __init__.py  asset_classification_overrides.yml  asset_taxonomy.yml  assets.yml  binance_datasets.yml  calendars.yml  chain_taxonomy.yml  curation_snapshots.yml  defillama_datasets.yml  events.yml  factor_blocks.yml  feature_registry.yml  market_universe.yml  paths.py  public_figures.yml  research_modules.yml  sentiment_sources.yml
docs/: README.md  release_checklist.md
docs/architecture/: pipeline_design.md  repository_structure.md  reproducibility.md  system.md
docs/context/: 02_data_sources_factor_blocks_and_sample_design.md  05_state_of_the_art_tooling_notes_2026-04-15.md
docs/data/: README.md  data_governance.md  market_structure.md  (+2 more)
notebooks/: 01_data_profile.ipynb  03_structural_break_viz.ipynb
outputs/: README.md  manifest.json
prompts/: 02_exploratory_analysis_agent.md  05_writing_agent.md  07_red_team_reviewer_agent.md  08_final_synthesis_agent.md  AGENTS.md
reports/: README.md  artifact_index.md  final_public_readiness_audit.md  pr_summary_portfolio_v2.md  release_notes_portfolio_v2.md
research/: README.md  figure_specs.csv  manifest.json  root_figure_selection.csv
scripts/: 01_build_master_panel.py  02_run_analyses.py  03_make_figures.py  04_descriptives_and_summaries.py  05_robustness.py  06_feature_strength.py  audit_market_structure_endpoints.py  build_analysis_outputs.py  build_data_inventory.py  build_feature_store.py  build_market_structure_outputs.py  build_public_figures.py  build_research_figures.py  build_visual_gallery.py  check_public_surface.py  check_research_surface.py  export_outputs.py  fetch_market_structure_raw.py  ingest_defillama_daily_constituents.py  ingest_defillama_monthly_universe.py  inspect_core_files.py  legacy_ingest_pipeline.py  make_hero_figures.py  normalize_market_structure_cache.py  run_all.py  run_full_pipeline.py  run_portfolio_pipeline.py  run_portfolio_v2_1_pipeline.py  run_portfolio_v2_2_pipeline.py  run_research.py
tools/: README.md  fetch_farside_etf_csv.py  organize_cryptoquant_metrics.py  tradingview_curate_cryptocap.py
(+762 files in other folders)
